[gd_scene load_steps=3 format=3 uid="uid://dkyjr4vbkqxse"]

[ext_resource type="Script" uid="uid://dfkvrtlh6wwjc" path="res://scripts/map/node_map_scene.gd" id="1_76cja"]
[ext_resource type="Texture2D" uid="uid://j0ohhd10oj7y" path="res://scenes/map/background3.png" id="2_a6rxb"]

[node name="NodeMapScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_76cja")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
texture = ExtResource("2_a6rxb")
stretch_mode = 5

[node name="MapTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 800.0
offset_right = 1000.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 28
text = "地下城 - 第1层"
horizontal_alignment = 1

[node name="MapContainer" type="Control" parent="."]
anchors_preset = 0
offset_left = 361.0
offset_top = 273.0
offset_right = 1385.0
offset_bottom = 773.0

[node name="EdgeContainer" type="Control" parent="MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NodeContainer" type="Control" parent="MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -45.0
offset_right = -39.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerInfo" type="Panel" parent="."]
layout_mode = 0
offset_left = 1370.0
offset_right = 1600.0
offset_bottom = 100.0

[node name="HealthLabel" type="Label" parent="PlayerInfo"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "生命: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="PlayerInfo"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -45.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "金币: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 800.0
offset_right = 900.0
offset_bottom = 840.0
theme_override_font_sizes/font_size = 20
text = "返回"

[node name="GenerationSettings" type="Node" parent="."]

[node name="NodeSettings" type="Node" parent="."]
